# py-gameconf-server

./: README.md  config.example.ini  gameconf_server.py  pyproject.toml  setup.cfg
gameconf_server/: __init__.py  http_server.py  server.py
