[tool.poetry]
name = "gameconf-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
vdf = "^3.2"
cachetools = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
server = "gameconf_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
