[tool.poetry]
name = "gameconf-server"
version = "0.1.1"
description = "An HTTP service that responds to SourceMod game config update requests."
authors = ["nosoop <nosoop@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
vdf = "^3.2"
cachetools = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
server = "gameconf_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
