[metadata]
name = gameconf-server
version = 0.1.2
author = nosoop
description = Implementation of a SourceMod game configuration server.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: System :: Installation/Setup
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >= 3.7

install_requires =
    vdf>=3.2
